force-app/main/default/objects/Integration_Point__mdt.object
<CustomObject>
    <description>REST callout integration details</description>
    <fields>
        <fullName>API_Version__c</fullName>
        <label>API Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Send?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endpoint_Relative_URL__c</fullName>
        <label>Endpoint Relative URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HEAD</fullName>
                </value>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interface_Id__c</fullName>
        <label>Interface Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <label>Named Credential</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Time_out__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Configurable time out on HTTP Request object</description>
        <label>Request Time out</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Point</label>
    <pluralLabel>Integration Points</pluralLabel>
</CustomObject>